Calculadora/arbol/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> NAME EQUALS expression
Rule 5     expression -> expression MULTIPLICACION expression
Rule 6     expression -> expression DIVISION expression
Rule 7     expression -> expression SUMA expression
Rule 8     expression -> expression RESTA expression
Rule 9     expression -> LPAREN expression RPAREN
Rule 10    expression -> INT
Rule 11    expression -> FLOAT
Rule 12    expression -> NAME
Rule 13    empty -> <empty>

Terminals, with rules where they appear

DIVISION             : 6
EQUALS               : 4
FLOAT                : 11
INT                  : 10
LPAREN               : 9
MULTIPLICACION       : 5
NAME                 : 4 12
RESTA                : 8
RPAREN               : 9
SUMA                 : 7
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 5 5 6 6 7 7 8 8 9
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME
    (4) var_assign -> . NAME EQUALS expression
    (13) empty -> .

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 8
    $end            reduce using rule 13 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    $end            reduce using rule 1 (calc -> expression .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10
    SUMA            shift and go to state 11
    RESTA           shift and go to state 12


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (9) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 13

state 6

    (10) expression -> INT .

    MULTIPLICACION  reduce using rule 10 (expression -> INT .)
    DIVISION        reduce using rule 10 (expression -> INT .)
    SUMA            reduce using rule 10 (expression -> INT .)
    RESTA           reduce using rule 10 (expression -> INT .)
    $end            reduce using rule 10 (expression -> INT .)
    RPAREN          reduce using rule 10 (expression -> INT .)


state 7

    (11) expression -> FLOAT .

    MULTIPLICACION  reduce using rule 11 (expression -> FLOAT .)
    DIVISION        reduce using rule 11 (expression -> FLOAT .)
    SUMA            reduce using rule 11 (expression -> FLOAT .)
    RESTA           reduce using rule 11 (expression -> FLOAT .)
    $end            reduce using rule 11 (expression -> FLOAT .)
    RPAREN          reduce using rule 11 (expression -> FLOAT .)


state 8

    (12) expression -> NAME .
    (4) var_assign -> NAME . EQUALS expression

    MULTIPLICACION  reduce using rule 12 (expression -> NAME .)
    DIVISION        reduce using rule 12 (expression -> NAME .)
    SUMA            reduce using rule 12 (expression -> NAME .)
    RESTA           reduce using rule 12 (expression -> NAME .)
    $end            reduce using rule 12 (expression -> NAME .)
    EQUALS          shift and go to state 15


state 9

    (5) expression -> expression MULTIPLICACION . expression
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 16

state 10

    (6) expression -> expression DIVISION . expression
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 17

state 11

    (7) expression -> expression SUMA . expression
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 18

state 12

    (8) expression -> expression RESTA . expression
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 19

state 13

    (9) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    RPAREN          shift and go to state 20
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10
    SUMA            shift and go to state 11
    RESTA           shift and go to state 12


state 14

    (12) expression -> NAME .

    RPAREN          reduce using rule 12 (expression -> NAME .)
    MULTIPLICACION  reduce using rule 12 (expression -> NAME .)
    DIVISION        reduce using rule 12 (expression -> NAME .)
    SUMA            reduce using rule 12 (expression -> NAME .)
    RESTA           reduce using rule 12 (expression -> NAME .)
    $end            reduce using rule 12 (expression -> NAME .)


state 15

    (4) var_assign -> NAME EQUALS . expression
    (5) expression -> . expression MULTIPLICACION expression
    (6) expression -> . expression DIVISION expression
    (7) expression -> . expression SUMA expression
    (8) expression -> . expression RESTA expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . NAME

    LPAREN          shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    NAME            shift and go to state 14

    expression                     shift and go to state 21

state 16

    (5) expression -> expression MULTIPLICACION expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    MULTIPLICACION  reduce using rule 5 (expression -> expression MULTIPLICACION expression .)
    DIVISION        reduce using rule 5 (expression -> expression MULTIPLICACION expression .)
    SUMA            reduce using rule 5 (expression -> expression MULTIPLICACION expression .)
    RESTA           reduce using rule 5 (expression -> expression MULTIPLICACION expression .)
    $end            reduce using rule 5 (expression -> expression MULTIPLICACION expression .)
    RPAREN          reduce using rule 5 (expression -> expression MULTIPLICACION expression .)

  ! MULTIPLICACION  [ shift and go to state 9 ]
  ! DIVISION        [ shift and go to state 10 ]
  ! SUMA            [ shift and go to state 11 ]
  ! RESTA           [ shift and go to state 12 ]


state 17

    (6) expression -> expression DIVISION expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    MULTIPLICACION  reduce using rule 6 (expression -> expression DIVISION expression .)
    DIVISION        reduce using rule 6 (expression -> expression DIVISION expression .)
    SUMA            reduce using rule 6 (expression -> expression DIVISION expression .)
    RESTA           reduce using rule 6 (expression -> expression DIVISION expression .)
    $end            reduce using rule 6 (expression -> expression DIVISION expression .)
    RPAREN          reduce using rule 6 (expression -> expression DIVISION expression .)

  ! MULTIPLICACION  [ shift and go to state 9 ]
  ! DIVISION        [ shift and go to state 10 ]
  ! SUMA            [ shift and go to state 11 ]
  ! RESTA           [ shift and go to state 12 ]


state 18

    (7) expression -> expression SUMA expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    SUMA            reduce using rule 7 (expression -> expression SUMA expression .)
    RESTA           reduce using rule 7 (expression -> expression SUMA expression .)
    $end            reduce using rule 7 (expression -> expression SUMA expression .)
    RPAREN          reduce using rule 7 (expression -> expression SUMA expression .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10

  ! MULTIPLICACION  [ reduce using rule 7 (expression -> expression SUMA expression .) ]
  ! DIVISION        [ reduce using rule 7 (expression -> expression SUMA expression .) ]
  ! SUMA            [ shift and go to state 11 ]
  ! RESTA           [ shift and go to state 12 ]


state 19

    (8) expression -> expression RESTA expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    SUMA            reduce using rule 8 (expression -> expression RESTA expression .)
    RESTA           reduce using rule 8 (expression -> expression RESTA expression .)
    $end            reduce using rule 8 (expression -> expression RESTA expression .)
    RPAREN          reduce using rule 8 (expression -> expression RESTA expression .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10

  ! MULTIPLICACION  [ reduce using rule 8 (expression -> expression RESTA expression .) ]
  ! DIVISION        [ reduce using rule 8 (expression -> expression RESTA expression .) ]
  ! SUMA            [ shift and go to state 11 ]
  ! RESTA           [ shift and go to state 12 ]


state 20

    (9) expression -> LPAREN expression RPAREN .

    MULTIPLICACION  reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    DIVISION        reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    SUMA            reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    RESTA           reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (expression -> LPAREN expression RPAREN .)


state 21

    (4) var_assign -> NAME EQUALS expression .
    (5) expression -> expression . MULTIPLICACION expression
    (6) expression -> expression . DIVISION expression
    (7) expression -> expression . SUMA expression
    (8) expression -> expression . RESTA expression

    $end            reduce using rule 4 (var_assign -> NAME EQUALS expression .)
    MULTIPLICACION  shift and go to state 9
    DIVISION        shift and go to state 10
    SUMA            shift and go to state 11
    RESTA           shift and go to state 12

